fix: align the sidebar on animal pages

--- a/online-zoo/pages/zoos-translation/alligator/alligator.css
+++ b/online-zoo/pages/zoos-translation/alligator/alligator.css
@@ -122,7 +122,7 @@ li {
 .aside {
   background:  #fcfcfc;
   position: sticky;
-  top: 21px;
+  top: 25px;
   height: 766px;
 }
 .aside__nav {
